--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-    <title>vue-test</title>
-    <link rel="stylesheet" href="static/base.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>vue_project</title>
+
   </head>
   <body>
-  <div id="app"><!-- built files will be auto injected --></div>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
   </body>
 </html>
